@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project basedir="." default="build" name="relex">
     <property name="VERSION" value="1.4"/>
-    <property name="REVISION" value="1.4.2"/>
+    <property name="REVISION" value="1.4.3"/>
 
     <!-- <property name="PREFIX" value="${basedir}/lib"/> -->
     <property name="PREFIX" value="/usr/share/java"/>
